[gd_scene load_steps=3 format=2]

[ext_resource path="res://Resources/theme.tres" type="Theme" id=1]
[ext_resource path="res://Explorer/List.gd" type="Script" id=2]

[node name="List" type="Control"]
theme = ExtResource( 1 )
script = ExtResource( 2 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Ueberschrift" type="Label" parent="VBoxContainer"]
margin_right = 286.0
margin_bottom = 59.0
text = "Example"
align = 1
uppercase = true

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
margin_top = 63.0
margin_right = 286.0
margin_bottom = 67.0

[node name="ItemList" type="ItemList" parent="VBoxContainer"]
margin_top = 71.0
margin_right = 286.0
margin_bottom = 71.0
size_flags_vertical = 3

[node name="HSeparator1" type="HSeparator" parent="VBoxContainer"]
margin_top = 75.0
margin_right = 286.0
margin_bottom = 79.0

[node name="Actions" type="HBoxContainer" parent="VBoxContainer"]
editor/display_folded = true
margin_top = 83.0
margin_right = 286.0
margin_bottom = 148.0

[node name="Next" type="Button" parent="VBoxContainer/Actions"]
margin_right = 54.0
margin_bottom = 65.0
size_flags_horizontal = 2
text = "↓"

[node name="Previous" type="Button" parent="VBoxContainer/Actions"]
margin_left = 58.0
margin_right = 112.0
margin_bottom = 65.0
size_flags_horizontal = 2
text = "↑"

[node name="Add" type="Button" parent="VBoxContainer/Actions"]
margin_left = 116.0
margin_right = 170.0
margin_bottom = 65.0
size_flags_horizontal = 2
text = "+"

[node name="Remove" type="Button" parent="VBoxContainer/Actions"]
margin_left = 174.0
margin_right = 228.0
margin_bottom = 65.0
size_flags_horizontal = 2
text = "✕"

[node name="Rename" type="Button" parent="VBoxContainer/Actions"]
margin_left = 232.0
margin_right = 286.0
margin_bottom = 65.0
size_flags_horizontal = 2
text = "✎"

[node name="NewItemDialog" type="AcceptDialog" parent="."]
editor/display_folded = true
margin_right = 992.0
margin_bottom = 158.0
window_title = ""

[node name="InputContainer" type="HBoxContainer" parent="NewItemDialog"]
margin_left = 8.0
margin_top = 8.0
margin_right = 984.0
margin_bottom = 77.0

[node name="Label" type="Label" parent="NewItemDialog/InputContainer"]
margin_top = 5.0
margin_right = 165.0
margin_bottom = 64.0
text = "Name:"

[node name="LineEdit" type="LineEdit" parent="NewItemDialog/InputContainer"]
margin_left = 169.0
margin_right = 976.0
margin_bottom = 69.0
size_flags_horizontal = 3
text = " "

[node name="RenameDialog" type="AcceptDialog" parent="."]
editor/display_folded = true
margin_right = 987.0
margin_bottom = 158.0
window_title = ""

[node name="InputContainer" type="HBoxContainer" parent="RenameDialog"]
margin_left = 8.0
margin_top = 8.0
margin_right = 979.0
margin_bottom = 77.0

[node name="Label" type="Label" parent="RenameDialog/InputContainer"]
margin_top = 5.0
margin_right = 165.0
margin_bottom = 64.0
text = "Name:"

[node name="LineEdit" type="LineEdit" parent="RenameDialog/InputContainer"]
margin_left = 169.0
margin_right = 971.0
margin_bottom = 69.0
size_flags_horizontal = 3

[node name="DeleteDialog" type="ConfirmationDialog" parent="."]
margin_right = 989.0
margin_bottom = 148.0
window_title = ""
dialog_text = "Sind Sie Sicher?"
[connection signal="item_selected" from="VBoxContainer/ItemList" to="." method="_on_item_selected"]
[connection signal="pressed" from="VBoxContainer/Actions/Next" to="." method="_on_Next_pressed"]
[connection signal="pressed" from="VBoxContainer/Actions/Previous" to="." method="_on_Previous_pressed"]
[connection signal="pressed" from="VBoxContainer/Actions/Add" to="." method="_on_Add_pressed"]
[connection signal="pressed" from="VBoxContainer/Actions/Remove" to="." method="_on_Remove_pressed"]
[connection signal="pressed" from="VBoxContainer/Actions/Rename" to="." method="_on_Rename_pressed"]
[connection signal="confirmed" from="NewItemDialog" to="." method="_on_NewItemDialog_confirmed"]
[connection signal="confirmed" from="RenameDialog" to="." method="_on_RenameDialog_confirmed"]
[connection signal="confirmed" from="DeleteDialog" to="." method="_on_DeleteDialog_confirmed"]
